Bonus: refactor all project